<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UN</string>
    <string name="action_settings">Settings</string>
    <string name="client_id">客户端标识</string>
    <string name="client_id_summary">唯一的MQTT标识，自动生成，无需改动</string>
    <string name="server_uri">服务器</string>
    <string name="server_uri_summary">MQTT服务器地址（tcp://hostname[:port]）</string>
    <string name="topic">订阅主题</string>
    <string name="topic_summary">需要订阅的主题（多个主题使用空格隔开）</string>
    <string name="ping_interval">心跳间隔</string>
    <string name="ping_interval_summary">MQTT心跳数据包发送间隔</string>
    <string name="title_activity_settings">幽信配置</string>
    <string name="default_server_uri">tcp://m2m.eclipse.org:1883</string>
    <string name="default_topic">/un</string>

</resources>