<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:inputType="textUri"
        android:key="client_id"
        android:summary="@string/client_id_summary"
        android:title="@string/client_id" />
    <EditTextPreference
        android:defaultValue="@string/default_server_uri"
        android:inputType="textUri"
        android:key="server_uri"
        android:summary="@string/server_uri_summary"
        android:title="@string/server_uri" />
    <EditTextPreference
        android:defaultValue="@string/default_topic"
        android:inputType="textUri"
        android:key="topic"
        android:summary="@string/topic_summary"
        android:title="@string/topic" />

</PreferenceScreen>